Hobby icons lost functionality due to an HTML stacking issue. Fixed this using z-index.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -604,6 +604,7 @@ body {
     right: 0;
     margin: 0 auto;
     border: 5px solid white;
+    z-index: 1;
 }
 
 .y-axis {
